#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
OAuth 2.0 è®¤è¯ä¸­é—´ä»¶

æ‹¦æˆªæ‰€æœ‰è¯·æ±‚ï¼ŒéªŒè¯ Bearer Tokenï¼Œæ”¯æŒç™½åå•è·¯å¾„
"""

import logging
from typing import Callable, Any, Set
from fastapi import Request, HTTPException
from fastapi.responses import JSONResponse
from starlette.middleware.base import BaseHTTPMiddleware

from src.clients.auth_client_grpc import get_auth_client

logger = logging.getLogger(__name__)

# ç™½åå•è·¯å¾„ï¼ˆä¸éœ€è¦è®¤è¯çš„è·¯å¾„ï¼‰
WHITELIST_PATHS: Set[str] = {
    "/health",
    "/healthz",
    "/api/v1/auth/login",
    "/api/v1/oauth/authorize",
    "/api/v1/oauth/token",
    "/api/v1/oauth/refresh",
    "/api/grpc-web/frontend.gateway.FrontendGateway/Call",  # gRPC ç½‘å…³è·¯å¾„ï¼ˆéœ€è¦åœ¨ç½‘å…³å†…éƒ¨å¤„ç†è®¤è¯ï¼‰
    "/docs",
    "/openapi.json",
    "/redoc",
}

# ç™½åå•è·¯å¾„å‰ç¼€ï¼ˆAPIè·¯å¾„å‰ç¼€ï¼Œä¸éœ€è¦è®¤è¯ï¼‰
WHITELIST_API_PREFIXES: Set[str] = {
    "/api/v1/hot-reload",  # çƒ­æ›´æ–°æ¥å£ï¼ˆå¿…é¡»ä¸éœ€è¦è®¤è¯ï¼Œå¦åˆ™æ— æ³•è§¦å‘çƒ­æ›´æ–°ï¼‰
}

# ç™½åå•è·¯å¾„å‰ç¼€ï¼ˆé™æ€æ–‡ä»¶è·¯å¾„ï¼‰
WHITELIST_PREFIXES: Set[str] = {
    "/local_frontend",  # æœ¬åœ°å‰ç«¯ç›®å½•
    "/frontend",  # å‰ç«¯ç›®å½•åˆ«å
}

# gRPC ç½‘å…³ä¸­ä¸éœ€è¦è®¤è¯çš„ç«¯ç‚¹ï¼ˆåœ¨ç½‘å…³å†…éƒ¨å¤„ç†ï¼‰
GRPC_WHITELIST_ENDPOINTS: Set[str] = {
    "/auth/login",  # ç™»å½•æ¥å£
    "/oauth/authorize",  # OAuth æˆæƒ
    "/oauth/token",  # OAuth Token è·å–
    "/oauth/refresh",  # OAuth Token åˆ·æ–°
}


class AuthMiddleware(BaseHTTPMiddleware):
    """OAuth 2.0 è®¤è¯ä¸­é—´ä»¶"""
    
    def __init__(self, app, whitelist_paths: Set[str] = None, whitelist_prefixes: Set[str] = None):
        """
        åˆå§‹åŒ–è®¤è¯ä¸­é—´ä»¶
        
        Args:
            app: FastAPI åº”ç”¨å®ä¾‹
            whitelist_paths: ç™½åå•è·¯å¾„é›†åˆï¼ˆå¯é€‰ï¼Œé»˜è®¤ä½¿ç”¨å…¨å±€ç™½åå•ï¼‰
            whitelist_prefixes: ç™½åå•è·¯å¾„å‰ç¼€é›†åˆï¼ˆå¯é€‰ï¼Œé»˜è®¤ä½¿ç”¨å…¨å±€ç™½åå•å‰ç¼€ï¼‰
        """
        super().__init__(app)
        # â­ å¼ºåˆ¶ä½¿ç”¨å…¨å±€ç™½åå•ï¼ˆç¡®ä¿ä½¿ç”¨æœ€æ–°çš„é…ç½®ï¼‰
        self.whitelist_paths = whitelist_paths if whitelist_paths is not None else WHITELIST_PATHS.copy()
        self.whitelist_prefixes = whitelist_prefixes if whitelist_prefixes is not None else WHITELIST_PREFIXES.copy()
        self.auth_client = get_auth_client()
        
        # è°ƒè¯•ï¼šæ‰“å°åˆå§‹åŒ–ä¿¡æ¯
        logger.info(f"ğŸ”§ [è®¤è¯ä¸­é—´ä»¶] åˆå§‹åŒ–å®Œæˆ")
        logger.info(f"   ç™½åå•è·¯å¾„æ•°: {len(self.whitelist_paths)}")
        logger.info(f"   ç™½åå•å‰ç¼€: {list(self.whitelist_prefixes)}")
    
    async def dispatch(self, request: Request, call_next: Callable) -> Any:
        """
        å¤„ç†è¯·æ±‚ï¼ŒéªŒè¯ Token
        
        Args:
            request: FastAPI è¯·æ±‚å¯¹è±¡
            call_next: ä¸‹ä¸€ä¸ªä¸­é—´ä»¶æˆ–è·¯ç”±å¤„ç†å‡½æ•°
            
        Returns:
            å“åº”å¯¹è±¡
        """
        path = request.url.path
        
        # â­ å…³é”®ä¿®å¤ï¼šç›´æ¥ä½¿ç”¨å…¨å±€å˜é‡ï¼Œè€Œä¸æ˜¯å®ä¾‹å˜é‡
        # è¿™æ ·å¯ä»¥ç¡®ä¿å³ä½¿ä¸­é—´ä»¶å®ä¾‹æ˜¯æ—§çš„ï¼Œä¹Ÿèƒ½ä½¿ç”¨æœ€æ–°çš„ç™½åå•é…ç½®
        
        # 1. ä¼˜å…ˆæ£€æŸ¥é™æ€æ–‡ä»¶å‰ç¼€ï¼ˆæœ€é«˜ä¼˜å…ˆçº§ï¼Œå¿…é¡»åœ¨æ‰€æœ‰æ£€æŸ¥ä¹‹å‰ï¼‰
        #    ä½¿ç”¨å…¨å±€å˜é‡ WHITELIST_PREFIXESï¼Œç¡®ä¿ä½¿ç”¨æœ€æ–°é…ç½®
        for prefix in WHITELIST_PREFIXES:
            if path.startswith(prefix):
                # é™æ€æ–‡ä»¶è·¯å¾„ï¼Œç›´æ¥æ”¾è¡Œï¼Œä¸è®°å½•æ—¥å¿—ï¼ˆå‡å°‘æ—¥å¿—é‡ï¼‰
                return await call_next(request)
        
        # 2. æ£€æŸ¥æ˜¯å¦åœ¨ç™½åå•APIå‰ç¼€ä¸­ï¼ˆå¦‚çƒ­æ›´æ–°æ¥å£ï¼‰
        for prefix in WHITELIST_API_PREFIXES:
            if path.startswith(prefix):
                logger.debug(f"âœ… [è®¤è¯ä¸­é—´ä»¶] APIè·¯å¾„åœ¨ç™½åå•ä¸­: {path} (å‰ç¼€: {prefix})")
                return await call_next(request)
        
        # 3. æ£€æŸ¥æ˜¯å¦åœ¨ç™½åå•ä¸­ï¼ˆä½¿ç”¨å…¨å±€å˜é‡ï¼‰
        if path in WHITELIST_PATHS:
            logger.debug(f"âœ… [è®¤è¯ä¸­é—´ä»¶] è·¯å¾„åœ¨ç™½åå•ä¸­: {path}")
            return await call_next(request)
        
        # ç‰¹æ®Šå¤„ç†ï¼šæ ¹è·¯å¾„å’Œé™æ€èµ„æº
        if path == "/" or path.startswith("/static/") or path.startswith("/assets/"):
            logger.info(f"âœ… [è®¤è¯ä¸­é—´ä»¶] é™æ€èµ„æºè·¯å¾„ï¼Œæ”¾è¡Œ: {path}")
            return await call_next(request)
        
        logger.warning(f"âš ï¸ [è®¤è¯ä¸­é—´ä»¶] è·¯å¾„ä¸åœ¨ç™½åå•ä¸­ï¼Œéœ€è¦è®¤è¯: {path}")
        
        # ç‰¹æ®Šå¤„ç†ï¼šgRPC ç½‘å…³è·¯å¾„ï¼Œè®¤è¯åœ¨ç½‘å…³å†…éƒ¨å¤„ç†
        if request.url.path == "/api/grpc-web/frontend.gateway.FrontendGateway/Call":
            # gRPC ç½‘å…³è·¯å¾„å·²ç»åœ¨ç™½åå•ä¸­ï¼Œç›´æ¥æ”¾è¡Œ
            # è®¤è¯é€»è¾‘åœ¨ gRPC ç½‘å…³å†…éƒ¨æ ¹æ® endpoint å¤„ç†
            return await call_next(request)
        
        # æå– Bearer Token
        auth_header = request.headers.get("Authorization", "")
        if not auth_header or not auth_header.startswith("Bearer "):
            logger.warning(f"æœªæä¾›è®¤è¯ä¿¡æ¯: {request.method} {request.url.path}")
            return JSONResponse(
                status_code=401,
                content={
                    "success": False,
                    "error": "æœªæä¾›è®¤è¯ä¿¡æ¯ï¼Œè¯·åœ¨è¯·æ±‚å¤´ä¸­æ·»åŠ  Authorization: Bearer <token>",
                    "error_type": "unauthorized"
                }
            )
        
        # æå– Token
        token = auth_header[7:]  # ç§»é™¤ "Bearer " å‰ç¼€
        
        if not token:
            logger.warning(f"Token ä¸ºç©º: {request.method} {request.url.path}")
            return JSONResponse(
                status_code=401,
                content={
                    "success": False,
                    "error": "Token ä¸ºç©º",
                    "error_type": "unauthorized"
                }
            )
        
        # éªŒè¯ Token
        try:
            result = self.auth_client.verify_token(token)
            
            if not result.get("valid", False):
                error_msg = result.get("error", "Token æ— æ•ˆæˆ–å·²è¿‡æœŸ")
                logger.warning(f"Token éªŒè¯å¤±è´¥: {request.method} {request.url.path}, error: {error_msg}")
                return JSONResponse(
                    status_code=401,
                    content={
                        "success": False,
                        "error": error_msg,
                        "error_type": "unauthorized"
                    }
                )
            
            # Token éªŒè¯æˆåŠŸï¼Œå°†ç”¨æˆ·ä¿¡æ¯æ·»åŠ åˆ°è¯·æ±‚çŠ¶æ€ä¸­ï¼ˆå¯é€‰ï¼‰
            request.state.user_id = result.get("user_id", "")
            request.state.client_id = result.get("client_id", "")
            request.state.token_expires_at = result.get("expires_at", 0)
            
            # ç»§ç»­å¤„ç†è¯·æ±‚
            return await call_next(request)
            
        except Exception as e:
            logger.error(f"è®¤è¯æœåŠ¡é”™è¯¯: {request.method} {request.url.path}, error: {str(e)}", exc_info=True)
            return JSONResponse(
                status_code=503,
                content={
                    "success": False,
                    "error": "è®¤è¯æœåŠ¡æš‚æ—¶ä¸å¯ç”¨ï¼Œè¯·ç¨åé‡è¯•",
                    "error_type": "service_unavailable"
                }
            )
